# jerreda

./: .gitignore  README.md  pyproject.toml
notebook/: 10minutes.ipynb  10munutes.ipynb  Quiz1.ipynb  chart.ipynb  first.ipynb  test.ipynb
src/jerreda/: cli.py
tests/: test_first.py
