[project]
name = "jerreda"
version = "0.3.0"
description = "EDA"
authors = [
    {name = "vhzkclq0705", email = "dhwns1513@gmail.com"},
]
dependencies = ["pandas>=2.2.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[dependency-groups]
eda = [
    "jupyterlab>=4.3.4",
]
test = [
    "pytest>=8.3.4",
]
